# test_task

./: README.md  pyproject.toml  test_db.json
menu/: apps.py  models.py  urls.py
menu/migrations/: 0001_initial.py
menu/templatetags/: menu_tags.py
task/: models.py  urls.py  views.py
task/task/: settings.py
templates/: base.html
templates/menu/: index.html  menu.html
test_UpTrader/: asgi.py  settings.py  urls.py  wsgi.py
