[tool.poetry]
name = "test-uptrader"
version = "0.1.0"
description = ""
authors = ["DanilMirosh <miroshnichenko.da.vi@mail.ru>"]
readme = "README.md"
packages = [{include = "test_uptrader"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
